# moon-component

./: .gitignore  NOTICE  README.mbt.md  README.md  install.sh  justfile  justfile.rust  moon.mod.json  moon.pkg  pkg.generated.mbti
.github/workflows/: ci.yml  release.yml
cmd/main/: moon.pkg  moon.pkg.json  pkg.generated.mbti
docs/: bundle-dependencies.md  component-dce.md  componentize.md  compose.md  introduce-moon-component-ja.md  rust-port.md  rust-to-moonbit.md  wasm-gc-component-resources.md  wkg-installation.md
examples/: calc.json  complex.json  complex.wit
examples/calc-impl/: calc.component.wasm  moon.mod.json
examples/compose/: README.md  moon-component.toml
examples/core-module/: README.md  composed.wasm  plug.wasm  plug.wat  socket.wasm  socket.wat
examples/demo-math/: moon.mod.json
examples/hello/: README.md  hello.component.wasm
examples/hello-wite/: README.md  justfile  moon.mod.json  wite.config.jsonc
examples/myapp2/: moon.mod.json  wkg.toml
examples/regex/: README.md  justfile  moon-component.toml
examples/reverse/: README.md  moon.mod.json
examples/spin-mars-router/: README.md  justfile  moon.mod.json  package.json  playwright.config.mjs  pnpm-lock.yaml  spin.toml
npm/: .npmignore  README.md  package.json
skill/: SKILL.md
src/: codegen.mbt  codegen_cabi.mbt  codegen_export.mbt  codegen_import.mbt  codegen_main.mbt  codegen_type.mbt  codegen_type_def.mbt  codegen_utils.mbt  codegen_wbtest.mbt  moon.pkg  moon.pkg.json  pkg.generated.mbti
tools/moon-component/: Cargo.toml
tools/moon-component/src/: dce.rs  main.rs
(+231 files in other folders)
