[package]
name = "moon-component"
version = "0.1.0"
edition = "2024"
description = "WebAssembly Component Model tooling for MoonBit"

[[bin]]
name = "moon-component"
path = "src/main.rs"

[dependencies]
wit-parser = { version = "0.244", features = ["serde", "wat"] }
wit-component = "0.244"
wasm-encoder = "0.244"
wasmparser = "0.244"
wasmprinter = "0.244"
wat = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
regex = "1"
